--- a/project.html
+++ b/project.html
@@ -6,5 +6,13 @@
 </title>
 </head>
 <body>
+  <script>
+    var ret = prompt("창원대학교대학원 입학년도를 숫자만 입력하세요", "");
+    if(ret == "2021")
+      alert("환영합니다")
+    if else(ret =="")
+      alert("다시 생각해보세요")
+      
+    </script>
 </body>
 </html>
