--- a/project.html
+++ b/project.html
@@ -10,7 +10,7 @@
     var ret = prompt("창원대학교대학원 입학년도를 숫자만 입력하세요", "");
     if(ret == "2021")
       alert("환영합니다")
-    if else(ret =="")
+    else
       alert("다시 생각해보세요")
       
     </script>
