--- a/project.html
+++ b/project.html
@@ -7,12 +7,12 @@
 </head>
 <body>
   <script>
-    var ret = prompt("창원대학교대학원 입학년도를 숫자만 입력하세요", "");
-    if(ret == "2021")
+    var loginpassword;
+    var number = prompt("창원대학교대학원 입학년도를 숫자만 입력하세요", "");
+    if(number == "2021")
       alert("환영합니다")
     else
       alert("다시 생각해보세요")
-      
     </script>
 </body>
 </html>
