--- a/project.html
+++ b/project.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h11>FreeTime</h11>
-    <img src="https://user-images.githubusercontent.com/92727096/144701962-d3d9ae76-b98b-461d-8e7e-da6dc33187c9.jpg" alt=오류>
+    <img src="![coffee-cup-gc2393fde1_1920](https://user-images.githubusercontent.com/92727096/144701962-d3d9ae76-b98b-461d-8e7e-da6dc33187c9.jpg)" alt=오류>
   </body>
   </html>
