--- a/project.html
+++ b/project.html
@@ -4,7 +4,7 @@
     <title>홈페이지에 오신 걸 환영합니다</title>
   </head>
   <body>
-    <h11>FreeTime</h11>
-    <img src="![coffee-cup-gc2393fde1_1920](https://user-images.githubusercontent.com/92727096/144701962-d3d9ae76-b98b-461d-8e7e-da6dc33187c9.jpg)" alt=오류>
+    <h1>FreeTime</h1>
+    <img src="![coffee-cup-gc2393fde1_1920](https://user-images.githubusercontent.com/92727096/144701962-d3d9ae76-b98b-461d-8e7e-da6dc33187c9.jpg)" width="200" height="100" alt=오류>
   </body>
   </html>
