--- a/project.html
+++ b/project.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>FreeTime</h1>
-    <img src="![coffee-cup-gc2393fde1_1920](https://user-images.githubusercontent.com/92727096/144701962-d3d9ae76-b98b-461d-8e7e-da6dc33187c9.jpg)" alt=오류>
+    <img src="![coffee-cup-gc2393fde1_1920](https://user-images.githubusercontent.com/92727096/144701962-d3d9ae76-b98b-461d-8e7e-da6dc33187c9.jpg)" width="200" height="100"
+         alt=오류>
   </body>
   </html>
