--- a/project.html
+++ b/project.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>홈페이지에 오신 걸 환영합니다</title>
-    <script src="mouseover.js"></script>
+    <script src="leeky330.github.io/mouseover.js"></script>
   </head>
   <body>
     <h1>FreeTime</h1>
