--- a/project.html
+++ b/project.html
@@ -7,7 +7,7 @@
   <body>
     <h1>FreeTime</h1>
     <img src="https://user-images.githubusercontent.com/92727096/144701962-d3d9ae76-b98b-461d-8e7e-da6dc33187c9.jpg" width="500" height="250" alt=오류
-         onmouseover="over(this)" onmouseout="out(this)"><br>
+         onmouseover="over(this)" onmouseout="out(https://user-images.githubusercontent.com/92727096/144701962-d3d9ae76-b98b-461d-8e7e-da6dc33187c9.jpg)"><br>
     <img src="https://user-images.githubusercontent.com/92727096/144703391-c0b3cd60-0042-42ad-a3c0-15b2dc009c25.jpg" width="500" height="250" alt=오류><br>
     <img src="https://user-images.githubusercontent.com/92727096/144703467-1a27de64-dc29-454c-afd6-70e79214c57c.jpg" width="500" height="250" alt=오류>
   </body>
