--- a/hiphop.html
+++ b/hiphop.html
@@ -7,6 +7,6 @@
 힙합&lsqb;HIPHOP&bsol;<br>
   힙합이란&quest;<br>
   1970년 미국에 거주하던 흑인들이 자유를 표현하는데서 생겨난 음악, 힙합
-  엉덩이
+  엉덩이&lpar;HIP&rpar; 와 흔들다&lpar;HOP&rpar; 를 합친 말입니다.
 </body>
 </html>
