--- a/hiphop.html
+++ b/hiphop.html
@@ -6,7 +6,7 @@
 <body>
 힙합&lsqb;HIPHOP&bsol;<br>
   힙합이란&quest;<br>
-  1970년 미국에 거주하던 흑인들이 자유를 표현하는데서 생겨난 음악, 힙합
-  엉덩이&lpar;HIP&rpar; 와 흔들다&lpar;HOP&rpar; 를 합친 말입니다.
+  1970년 미국에 거주하던 흑인들이 자유를 표현하는데서 생겨난 음악, 힙합<br>
+  엉덩이&#40;HIP&#41; 와 흔들다&#40;HOP&#41; 를 합친 말입니다.
 </body>
 </html>
