--- a/project.html
+++ b/project.html
@@ -5,6 +5,7 @@
     <script src="mouseover.js"></script>
   </head>
   <body>
+    <script src="script.js"></script>
     <h1>FreeTime</h1>
     <img src="https://user-images.githubusercontent.com/92727096/144701962-d3d9ae76-b98b-461d-8e7e-da6dc33187c9.jpg" width="500" height="250" alt=오류
          onmouseover="over(this)" 
