--- a/hiphop.html
+++ b/hiphop.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 <title>힙합</title>
+  <stlye>
+    font-family : "나눔스퀘어";
+    font-size : large;
+    </stlye>
 </head>
 <body>
 힙합&#91;HIPHOP&#93;<br>
