--- a/hiphop.html
+++ b/hiphop.html
@@ -3,8 +3,10 @@
 <head>
 <title>힙합</title>
   <stlye>
+    body{
     font-family : "나눔스퀘어";
-    font-size : large;
+    font-size : 40px;
+    }
     </stlye>
 </head>
 <body>
