--- a/hiphop.html
+++ b/hiphop.html
@@ -5,7 +5,7 @@
   <stlye>
     body{
     font-family : "나눔스퀘어", "Serif";
-    font-size : 40px;
+    font-size : large;
     }
     </stlye>
 </head>
