--- a/hiphop.html
+++ b/hiphop.html
@@ -4,7 +4,7 @@
 <title>힙합</title>
   <stlye>
     body{
-    font-family : "나눔스퀘어", "Serif";
+    font-family : "NanumSquare", San-serif;
     font-size : large;
     }
     </stlye>
