--- a/hiphop.html
+++ b/hiphop.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <title>힙합</title>
-  <stlye>
+  <style>
     body {
     font-family : "NanumSquare", San-serif;
     font-size : large;
     }
-    </stlye>
+    </style>
 </head>
 <body>
 힙합&#91;HIPHOP&#93;<br>
