--- a/hiphop.html
+++ b/hiphop.html
@@ -7,11 +7,13 @@
     font-family : "NanumSquare", San-serif;
     font-size : large;
     }
+    h1 {font-size : 40px;
+      
     </style>
 </head>
 <body>
-힙합&#91;HIPHOP&#93;<br>
-  힙합이란&#63;<br>
+<h1>힙합</h1>&#91;HIPHOP&#93;<br>
+  <p style="font-weight:bold">힙합이란&#63;</P><br>
   1970년 미국에 거주하던 흑인들이 자유를 표현하는데서 생겨난 음악, 힙합<br>
   힙합은 엉덩이&#40;HIP&#41; 와 흔들다&#40;HOP&#41; 를 합친 말입니다.
 </body>
