--- a/hiphop.html
+++ b/hiphop.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-<h1>힙합</h1>&#91;HIPHOP&#93;<br>
+<h1>힙합&#91;HIPHOP&#93;</h1><br>
   <p style="font-weight:bold">힙합이란&#63;</P><br>
   1970년 미국에 거주하던 흑인들이 자유를 표현하는데서 생겨난 음악, 힙합<br>
   힙합은 엉덩이&#40;HIP&#41; 와 흔들다&#40;HOP&#41; 를 합친 말입니다.
