--- a/project.html
+++ b/project.html
@@ -9,7 +9,7 @@
     <script src="mouseover.js"></script>
     <h1>FreeTime</h1>
     <img src="https://user-images.githubusercontent.com/92727096/144701962-d3d9ae76-b98b-461d-8e7e-da6dc33187c9.jpg" width="500" height="250" alt=오류
-         onmouseover="over(this)" 
+         onmouseover="this." 
          onmouseout="out(this)"><br>
     <a href="hiphop.html">
     <img src="https://user-images.githubusercontent.com/92727096/144703391-c0b3cd60-0042-42ad-a3c0-15b2dc009c25.jpg" width="500" height="250" alt=오류><br>
