--- a/project.html
+++ b/project.html
@@ -12,11 +12,11 @@
          onmouseout="this.src='https://user-images.githubusercontent.com/92727096/144701962-d3d9ae76-b98b-461d-8e7e-da6dc33187c9.jpg'"><br>
     <a href="hiphop.html">
     <img src="https://user-images.githubusercontent.com/92727096/144703391-c0b3cd60-0042-42ad-a3c0-15b2dc009c25.jpg" width="500" height="250" alt=오류
-         onmouseover="https://user-images.githubusercontent.com/92727096/144729180-ee231adb-b66e-4090-b620-deddcd940330.png'" 
-         onmouseout="https://user-images.githubusercontent.com/92727096/144703391-c0b3cd60-0042-42ad-a3c0-15b2dc009c25.jpg'"><br>
+         onmouseover="this.src='https://user-images.githubusercontent.com/92727096/144729180-ee231adb-b66e-4090-b620-deddcd940330.png'" 
+         onmouseout="this.src='https://user-images.githubusercontent.com/92727096/144703391-c0b3cd60-0042-42ad-a3c0-15b2dc009c25.jpg'"><br>
       </a>
     <img src="https://user-images.githubusercontent.com/92727096/144703467-1a27de64-dc29-454c-afd6-70e79214c57c.jpg" width="500" height="250" alt=오류
-         onmouseover="https://user-images.githubusercontent.com/92727096/144729181-b3c3f2dc-0073-4393-84eb-1c83cbdd4423.png'" 
-         onmouseout="https://user-images.githubusercontent.com/92727096/144703467-1a27de64-dc29-454c-afd6-70e79214c57c.jpg'">
+         onmouseover="this.src='https://user-images.githubusercontent.com/92727096/144729181-b3c3f2dc-0073-4393-84eb-1c83cbdd4423.png'" 
+         onmouseout="this.src='https://user-images.githubusercontent.com/92727096/144703467-1a27de64-dc29-454c-afd6-70e79214c57c.jpg'">
   </body>
   </html>
