--- a/hiphop.html
+++ b/hiphop.html
@@ -10,7 +10,7 @@
     h1 {font-size : 40px;
     }   
     </style>
-  <link type="text/css" rel="stylesheet" href="glitch.css">
+  <link type="text/css" rel="stylesheet" href="">
 </head>
 <body>
 <h1>힙합&#91;HIPHOP&#93;</h1><br>
