--- a/project.html
+++ b/project.html
@@ -4,7 +4,7 @@
     <title>홈페이지에 오신 걸 환영합니다</title>
     <link type="text/css" rel="stylesheet" href="projectcss1.css">
   </head>
-  <body>
+  <body class="main">
     <script src="script.js"></script>
     <script src="mouseover.js"></script>
     <h1>FreeTime</h1>
