--- a/project.html
+++ b/project.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>홈페이지에 오신 걸 환영합니다</title>
-    <link type="text/css" rel="stylesheet" href="projectcss1.css">
+   <link type="text/css" rel="stylesheet" href="projectcss1.css">
   </head>
-  <body class="main">
+  <body>
     <script src="script.js"></script>
     <script src="mouseover.js"></script>
     <h1>FreeTime</h1>
