--- a/project.html
+++ b/project.html
@@ -2,21 +2,38 @@
 <html>
   <head>
     <title>홈페이지에 오신 걸 환영합니다</title>
-   <link type="text/css" rel="stylesheet" href="project1.css">
+   <link type="text/css" rel="stylesheet" href="style.css">
+   <style>
+     h1{text-align:center;}
+  </style>
   </head>
   <body>
     <script src="script.js"></script>
     <h1>FreeTime</h1>
+    <link type="text/css" rel="stylesheet" href="coffee.css">
+   <div class="box">
     <img src="https://user-images.githubusercontent.com/92727096/144701962-d3d9ae76-b98b-461d-8e7e-da6dc33187c9.jpg" width="500" height="250" alt=오류
          onmouseover="this.src='https://user-images.githubusercontent.com/92727096/144729179-7bf50d22-2eaa-42f5-8575-fa38add3077b.png'" 
-         onmouseout="this.src='https://user-images.githubusercontent.com/92727096/144701962-d3d9ae76-b98b-461d-8e7e-da6dc33187c9.jpg'"><br>
-    <a href="hiphop.html">
+         onmouseout="this.src='https://user-images.githubusercontent.com/92727096/144701962-d3d9ae76-b98b-461d-8e7e-da6dc33187c9.jpg'">
+  <div class="text">저는 시간이 있을 때 커피 마시는 시간을 즐기곤 합니다.<br> 
+         커피에 대해 한번 알아 보도록할까요&#63;</div>
+         </div>
+        <br>
+ <link type="text/css" rel="stylesheet" href="hiphop.css">
+    <div class="box2"> 
+      <a href="hiphop.html">
     <img src="https://user-images.githubusercontent.com/92727096/144703391-c0b3cd60-0042-42ad-a3c0-15b2dc009c25.jpg" width="500" height="250" alt=오류
          onmouseover="this.src='https://user-images.githubusercontent.com/92727096/144729180-ee231adb-b66e-4090-b620-deddcd940330.png'" 
-         onmouseout="this.src='https://user-images.githubusercontent.com/92727096/144703391-c0b3cd60-0042-42ad-a3c0-15b2dc009c25.jpg'"><br>
-      </a>
+         onmouseout="this.src='https://user-images.githubusercontent.com/92727096/144703391-c0b3cd60-0042-42ad-a3c0-15b2dc009c25.jpg'">
+         </a>
+         <div class="text2">제가 가장 관심있는 음악은 힙합입니다. 함께 알아볼까요&#63;</div>
+         </div><br>
+ <link type="text/css" rel="stylesheet" href="edit.css">
+      <div class="box4"> 
     <img src="https://user-images.githubusercontent.com/92727096/144703467-1a27de64-dc29-454c-afd6-70e79214c57c.jpg" width="500" height="250" alt=오류
          onmouseover="this.src='https://user-images.githubusercontent.com/92727096/144729181-b3c3f2dc-0073-4393-84eb-1c83cbdd4423.png'" 
-         onmouseout="this.src='https://user-images.githubusercontent.com/92727096/144703467-1a27de64-dc29-454c-afd6-70e79214c57c.jpg'">
+         onmouseout="this.src='https://user-images.githubusercontent.com/92727096/144703467-1a27de64-dc29-454c-afd6-70e79214c57c.jpg'"
+    <div class="text4">학생들과 함께 교육영상을 만들어보았습니다. 함께 볼까요&#63;</div>
+         </div>
   </body>
   </html>
