--- a/hiphop.html
+++ b/hiphop.html
@@ -5,17 +5,36 @@
   <style>
     body {
     font-family : "NanumSquare", San-serif;
-    font-size : large;
+    font-size : 25px;
     }
-    h1 {font-size : 40px;
+    h1 {font-size : 40px;}
+    span{font-weight:bold;
+    font-size : 30px;}
+    .home {
+    display: scroll; position:fixed; bottom:650px; right:10px;z-index:99999999
+    float:right;
+    width: auto; height: auto;
+    max-width: 100px;
+    max-height: 100px;}
     }   
     </style>
   <link type="text/css" rel="stylesheet" href="">
 </head>
 <body>
 <h1>힙합&#91;HIPHOP&#93;</h1><br>
+<a href="return.html">
+<img class="home" src="https://user-images.githubusercontent.com/92727096/144775598-47cea155-90aa-49ed-a5e8-30cbf28df67a.png" border="0"></a>
   <p style="font-weight:bold">힙합이란&#63;</P><br>
-  1970년 미국에 거주하던 흑인들이 자유를 표현하는데서 생겨난 음악, 힙합<br>
+  1970년 미국에 거주하던 흑인들이 자유를 표현하는데서 생겨난 음악, <span>힙합</span><br>
   힙합은 엉덩이&#40;HIP&#41; 와 흔들다&#40;HOP&#41; 를 합친 말입니다.
+  힙합의 구성요소는 비트, 라임, 플로우 등이 있습니다.
+ <ul>
+   <li> 비트(beat): 
+   <li> 라임(rhyme):
+   <li> 플로우(flow):
+</ul>
+힙합에 대해 더 알고 싶은 점이 있으시다면 추천 영상을 참고해주세요! 
+<a href="https://static.ebs.co.kr/images/bhp/study/html001/2014/pop_vod.html?url=https://ebsvod.ebs.co.kr/ebsvod/ebslib/study/28/clip_1_7.mp4">
+(영상 &#150; 소년 소녀 &#145;랩&#146;으로 이야기하다 보러가기)</a>
 </body>
 </html>
