--- a/hiphop.html
+++ b/hiphop.html
@@ -34,7 +34,7 @@
    <li> 플로우(flow):
 </ul>
 힙합에 대해 더 알고 싶은 점이 있으시다면 추천 영상을 참고해주세요! 
-<a href="https://static.ebs.co.kr/images/bhp/study/html001/2014/pop_vod.html?url=https://ebsvod.ebs.co.kr/ebsvod/ebslib/study/28/clip_1_7.mp4">
+<a href="https://static.ebs.co.kr/images/bhp/study/html001/2014/pop_vod.html?url=https://ebsvod.ebs.co.kr/ebsvod/ebslib/study/28/clip_1_7.mp4" target="_blank">
 (영상 &#150; 소년 소녀 &#145;랩&#146;으로 이야기하다 보러가기)</a>
 </body>
 </html>
