--- a/return.html
+++ b/return.html
@@ -29,9 +29,11 @@
          </div><br>
  <link type="text/css" rel="stylesheet" href="edit.css">
       <div class="box4"> 
+        <a href="edit.html">
     <img src="https://user-images.githubusercontent.com/92727096/144703467-1a27de64-dc29-454c-afd6-70e79214c57c.jpg" width="700" height="350" alt=오류
          onmouseover="this.src='https://user-images.githubusercontent.com/92727096/144729181-b3c3f2dc-0073-4393-84eb-1c83cbdd4423.png'" 
          onmouseout="this.src='https://user-images.githubusercontent.com/92727096/144703467-1a27de64-dc29-454c-afd6-70e79214c57c.jpg'">
+        </a>
     <div class="text4">학생들과 함께 교육영상을 <br>만들어보았습니다. 함께 볼까요&#63;</div>
          </div>
   </body>
