--- a/edit.html
+++ b/edit.html
@@ -30,7 +30,7 @@
    <li> 장비: canon m6 mark2, 지윤텍 크레인 m2
 </ul>
 옆의 링크를 클릭하시면 유튜브 채널에서 영상을 확인하실 수 있습니다.
-<a href="https://www.youtube.com/channel/UCFkx0IiJcJZ9kAWSYjeWzLQ">
+<a href="https://www.youtube.com/channel/UCFkx0IiJcJZ9kAWSYjeWzLQ" target="_blank">
 (유튜브 채널 &#150; &#145;우리영상 같이볼래&#146;로 이동하기)</a>
 </body>
 </html>
