--- a/project.html
+++ b/project.html
@@ -6,13 +6,15 @@
   </style>
   </head>
   <body>
-    <script src="script.s"></script>
+    <script src="script.js"></script>
     <h1>FreeTime</h1>
     <link type="text/css" rel="stylesheet" href="coffee.css">
    <div class="box">
+        <a href="coffee.html">
     <img src="https://user-images.githubusercontent.com/92727096/144701962-d3d9ae76-b98b-461d-8e7e-da6dc33187c9.jpg" width="800" height="400" alt=오류
          onmouseover="this.src='https://user-images.githubusercontent.com/92727096/144729179-7bf50d22-2eaa-42f5-8575-fa38add3077b.png'" 
          onmouseout="this.src='https://user-images.githubusercontent.com/92727096/144701962-d3d9ae76-b98b-461d-8e7e-da6dc33187c9.jpg'">
+            </a>
   <div class="text">저는 시간이 있을 때 커피 마시는 시간을 즐기곤 합니다.<br> 
          커피에 대해 한번 알아 보도록할까요&#63;</div>
          </div>
