--- a/return.html
+++ b/return.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
+<head>
     <title>홈페이지에 오신 걸 환영합니다</title>
    <link type="text/css" rel="stylesheet" href="style.css">
    <style>
@@ -11,9 +9,11 @@
     <h1>FreeTime</h1>
     <link type="text/css" rel="stylesheet" href="coffee.css">
    <div class="box">
+        <a href="coffee.html">
     <img src="https://user-images.githubusercontent.com/92727096/144701962-d3d9ae76-b98b-461d-8e7e-da6dc33187c9.jpg" width="800" height="400" alt=오류
          onmouseover="this.src='https://user-images.githubusercontent.com/92727096/144729179-7bf50d22-2eaa-42f5-8575-fa38add3077b.png'" 
          onmouseout="this.src='https://user-images.githubusercontent.com/92727096/144701962-d3d9ae76-b98b-461d-8e7e-da6dc33187c9.jpg'">
+            </a>
   <div class="text">저는 시간이 있을 때 커피 마시는 시간을 즐기곤 합니다.<br> 
          커피에 대해 한번 알아 보도록할까요&#63;</div>
          </div>
@@ -29,11 +29,11 @@
          </div><br>
  <link type="text/css" rel="stylesheet" href="edit.css">
       <div class="box4"> 
-        <a href="edit.html">
+           <a href="edit.html">
     <img src="https://user-images.githubusercontent.com/92727096/144703467-1a27de64-dc29-454c-afd6-70e79214c57c.jpg" width="700" height="350" alt=오류
          onmouseover="this.src='https://user-images.githubusercontent.com/92727096/144729181-b3c3f2dc-0073-4393-84eb-1c83cbdd4423.png'" 
          onmouseout="this.src='https://user-images.githubusercontent.com/92727096/144703467-1a27de64-dc29-454c-afd6-70e79214c57c.jpg'">
-        </a>
+                </a>
     <div class="text4">학생들과 함께 교육영상을 <br>만들어보았습니다. 함께 볼까요&#63;</div>
          </div>
   </body>
