--- a/coffee.html
+++ b/coffee.html
@@ -33,7 +33,6 @@
    <li> 리베리카: 열매의 크기가 크고 길쭉함. 아라비카나 로부스타보다 더 쓰고 향은 약함. 전 세계 커피 생산량의 1~2% 이하.
 </ul>
   <br>
-  <br>
-  &#160;&#160;출처 <나무위키>
+ &#160;출처 <나무위키>
 </body>
 </html>
