--- a/edit.html
+++ b/edit.html
@@ -21,7 +21,7 @@
   <link type="text/css" rel="stylesheet" href="">
 </head>
 <body>
-<h1>영상제작&#91;HIPHOP&#93;</h1><br>
+<h1>영상제작&#91;make a video&#93;</h1><br>
 <a href="return.html">
 <img class="home" src="https://user-images.githubusercontent.com/92727096/144775598-47cea155-90aa-49ed-a5e8-30cbf28df67a.png" border="0"></a>
   평소 학생들과 교육과정과 연계하여 다양한 형태의 <span>교육영상</span>을 제작하고 있습니다. <br>
