--- a/return.html
+++ b/return.html
@@ -14,7 +14,7 @@
          onmouseover="this.src='https://user-images.githubusercontent.com/92727096/144729179-7bf50d22-2eaa-42f5-8575-fa38add3077b.png'" 
          onmouseout="this.src='https://user-images.githubusercontent.com/92727096/144701962-d3d9ae76-b98b-461d-8e7e-da6dc33187c9.jpg'">
             </a>
-  <div class="text">저는 시간이 있을 때 커피 마시는 시간을 즐기곤 합니다.<br> 
+  <div class="text">저는 커피 마시는 시간을 즐기곤 합니다.<br> 
          커피에 대해 한번 알아 보도록할까요&#63;</div>
          </div>
         <br>
@@ -25,7 +25,7 @@
          onmouseover="this.src='https://user-images.githubusercontent.com/92727096/144729180-ee231adb-b66e-4090-b620-deddcd940330.png'" 
          onmouseout="this.src='https://user-images.githubusercontent.com/92727096/144703391-c0b3cd60-0042-42ad-a3c0-15b2dc009c25.jpg'">
          </a>
-         <div class="text2">제가 가장 관심있는 음악은 힙합입니다. 함께 알아볼까요&#63;</div>
+         <div class="text2">제가 관심있는 음악은 힙합입니다. 함께 알아볼까요&#63;</div>
          </div><br>
  <link type="text/css" rel="stylesheet" href="edit.css">
       <div class="box4"> 
