--- a/project.html
+++ b/project.html
@@ -26,7 +26,7 @@
          onmouseover="this.src='https://user-images.githubusercontent.com/92727096/144729180-ee231adb-b66e-4090-b620-deddcd940330.png'" 
          onmouseout="this.src='https://user-images.githubusercontent.com/92727096/144703391-c0b3cd60-0042-42ad-a3c0-15b2dc009c25.jpg'">
          </a>
-         <div class="text2">제가 관심있는 음악은 힙합입니다. 함께 알아볼까요&#63;</div>
+         <div class="text2">제가 관심있는 음악은 힙합입니다.<br>함께 알아볼까요&#63;</div>
          </div><br>
  <link type="text/css" rel="stylesheet" href="edit.css">
       <div class="box4"> 
