--- a/edit.html
+++ b/edit.html
@@ -31,6 +31,8 @@
 </ul>
 옆의 링크를 클릭하시면 유튜브 채널에서 영상을 확인하실 수 있습니다.
 <a href="https://www.youtube.com/channel/UCFkx0IiJcJZ9kAWSYjeWzLQ" target="_blank">
-(유튜브 채널 &#150; &#145;우리영상 같이볼래&#146;로 이동하기)</a>
+(유튜브 채널 &#150; &#145;우리영상 같이볼래&#146;로 이동하기)</a><br>
+다른 영상 감상하기&#8594;
+<a href="https://youtu.be/_W5PYJK5qlk" target="_blank">안전교육영상(사이버 중독 - 증상편)</a>, <a href="https://youtu.be/IHuJ5BKLiV0" target="_blank">(사이버 중독 - 예방편)</a>
 </body>
 </html>
