--- a/coffee.html
+++ b/coffee.html
@@ -4,6 +4,7 @@
 <title>힙합</title>
   <style>
     body {
+      letter-spacing : 2px;
     font-family : "NanumSquare", San-serif;
     font-size : 25px;
     }
@@ -28,7 +29,7 @@
   <p style="font-weight:bold">커피</P><br>
   일반적으로 커피 열매(커피 체리)의 씨앗인 커피 콩, 혹은 그 씨앗을 볶은 뒤 갈아서 물에 우려내서 만드는 음료. 커피나무의 열매, 그 열매 속의 씨앗, 씨앗의 껍질을 벗기고 말린 생두, 생두를 볶은 원두, 원두를 분쇄한 가루, 가루에서 추출한 음료까지 모두 <span>'커피'</span>라고 부른다.&#160;&#160;출처 <나무위키><br>
  <ul>
-   <li> 아라비키: 인류 역사상 최초로 재배된 종. 고급품종이며 커피시장의 전체 70%를 차지. 맛이 부드러우며 균일하고 신맛이 특징.
+   <li> 아라비카: 인류 역사상 최초로 재배된 종. 고급품종이며 커피시장의 전체 70%를 차지. 맛이 부드러우며 균일하고 신맛이 특징.
    <li> 로부스타: 주로 해발고도가 낮은 지역에서 나오는 커피로 동남아시아에서 많이 생산됨. 맛이 단순하고 향이 약하며 쓴맛이 특징. 아라비카보다 카페인 함량이 높음.
    <li> 리베리카: 열매의 크기가 크고 길쭉함. 아라비카나 로부스타보다 더 쓰고 향은 약함. 전 세계 커피 생산량의 1~2% 이하.
 </ul>
