--- a/hiphop.html
+++ b/hiphop.html
@@ -4,6 +4,7 @@
 <title>힙합</title>
   <style>
     body {
+      letter-spacing: 10px;
     font-family : "NanumSquare", San-serif;
     font-size : 25px;
     }
