--- a/coffee.html
+++ b/coffee.html
@@ -13,7 +13,7 @@
     font-size : 30px;
     font-style: oblique;}
     .home {
-    display: scroll; position:fixed; bottom:650px; right:10px;z-index:99999999
+    display: scroll; position:fixed; top:10px; right:10px;z-index:99999999
     float:right;
     width: auto; height: auto;
     max-width: 100px;
