--- a/edit.html
+++ b/edit.html
@@ -11,7 +11,7 @@
     span{background:violet;
     font-size : 30px;}
     .home {
-    display: scroll; position:fixed; bottom:650px; right:10px;z-index:99999999
+    display: scroll; position:fixed; top:10px; right:10px;z-index:99999999
     float:right;
     width: auto; height: auto;
     max-width: 100px;
