--- a/edit.html
+++ b/edit.html
@@ -4,6 +4,7 @@
 <title>영상제작</title>
   <style>
     body {
+       letter-spacing : 3px;
     font-family : "NanumSquare", San-serif;
     font-size : 25px;
     }
