--- a/hiphop.html
+++ b/hiphop.html
@@ -17,7 +17,7 @@
     width: auto; height: auto;
     max-width: 100px;
     max-height: 100px;}
-    div{line-height:10px;}
+    div{line-height:5;}
     }   
     </style>
   <link type="text/css" rel="stylesheet" href="">
