--- a/hiphop.html
+++ b/hiphop.html
@@ -17,7 +17,7 @@
     width: auto; height: auto;
     max-width: 100px;
     max-height: 100px;}
-    div{line-height:3;}
+    div{line-height:2;}
     }   
     </style>
   <link type="text/css" rel="stylesheet" href="">
@@ -30,17 +30,17 @@
   1970년 미국에 거주하던 흑인들이 자유를 표현하는데서 생겨난 음악, <span>힙합</span><br>
   힙합은 엉덩이&#40;HIP&#41; 와 흔들다&#40;HOP&#41; 를 합친 말입니다.
   힙합의 구성요소는 비트, 라임, 플로우 등이 있습니다.
- <ul>
+ <div><ul>
    <li> 비트(beat): 비트는 랩을 할 때 배경으로 사용되는 음악을 말함. 비트는 크게 붐뱁과 트랩으로 나뉨.
-     <div><ol>
+     <ol>
        <li> 붐뱁비트는 드럼소리가 마치 ‘붐뱁’처럼 들린다고 해서 그 이름 지어졌으며, 드럼소리가 강조되는 것이 특징
        <li>트랩비트는 드럼 소리 중에서도 킥과 스네어를 느리게 치며 하이햇이 빠르게 연주되는데, 중독성 있는 소리가 특징
-         </ol></div><br> 
+         </ol><br> 
    <li> 라임(rhyme): 시에서 행과 연의 일정한 위치에 유사한 음운이나 비슷한 낱말을 배치하여 운율을 만듦.<br> 
         랩에서도 유사한 소리가 나는 낱말 및 음절을 배치하여 리듬감이 느껴지도록 하는 것을 라임이라고 함.<br> 
    <li> 플로우(flow): 목소리, 강약, 빠르기, 박자를 타는 방법 등 랩을 다양하게 꾸며 줄 수 있는 모든 요소.<br>
         예를 들어 같은 가사라도 누가 어떻게 랩을 하느냐에 따라 다른 느낌을 줄 수 있음.
-</ul>
+</ul></div>
 힙합에 대해 더 알고 싶은 점이 있으시다면 추천 영상을 참고해주세요! 
 <a href="https://static.ebs.co.kr/images/bhp/study/html001/2014/pop_vod.html?url=https://ebsvod.ebs.co.kr/ebsvod/ebslib/study/28/clip_1_7.mp4" target="_blank">
 (영상 &#150; 소년 소녀 &#145;랩&#146;으로 이야기하다 보러가기)</a>
