--- a/hiphop.html
+++ b/hiphop.html
@@ -41,7 +41,7 @@
    <li> 플로우(flow): 목소리, 강약, 빠르기, 박자를 타는 방법 등 랩을 다양하게 꾸며 줄 수 있는 모든 요소.<br>
         예를 들어 같은 가사라도 누가 어떻게 랩을 하느냐에 따라 다른 느낌을 줄 수 있음.
 </ul></div>
-힙합에 대해 더 알고 싶은 점이 있으시다면 추천 영상을 참고해주세요! 
+&raquo;힙합에 대해 더 알고 싶은 점이 있으시다면 추천 영상을 참고해주세요! 
 <a href="https://static.ebs.co.kr/images/bhp/study/html001/2014/pop_vod.html?url=https://ebsvod.ebs.co.kr/ebsvod/ebslib/study/28/clip_1_7.mp4" target="_blank">
 (영상 &#150; 소년 소녀 &#145;랩&#146;으로 이야기하다 보러가기)</a>
 </body>
