--- a/project.html
+++ b/project.html
@@ -1,6 +1,6 @@
 <head>
     <title>홈페이지에 오신 걸 환영합니다</title>
-   <link type="text/css" rel="stylesheet" href="style.css">
+   <link type="text/css" rel="stylesheet" href="project1.css">
    <style>
      h1{text-align:center; font-size:50px;}
   </style>
