--- a/project.html
+++ b/project.html
@@ -10,7 +10,7 @@
     <h1>FreeTime</h1>
     <link type="text/css" rel="stylesheet" href="coffee.css">
    <div class="box">
-        <a href="coffee.html">
+        <a href="https://padlet.com/dirbyby03330/m5gsctl0g0df7lga">
     <img src="https://user-images.githubusercontent.com/92727096/144701962-d3d9ae76-b98b-461d-8e7e-da6dc33187c9.jpg" width="800" height="400" alt=오류
          onmouseover="this.src='https://user-images.githubusercontent.com/92727096/144729179-7bf50d22-2eaa-42f5-8575-fa38add3077b.png'" 
          onmouseout="this.src='https://user-images.githubusercontent.com/92727096/144701962-d3d9ae76-b98b-461d-8e7e-da6dc33187c9.jpg'">
